tests/baselines/reference/superPropertyAccess1(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
superPropertyAccess1.ts(13,15): error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
superPropertyAccess1.ts(19,15): error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
superPropertyAccess1.ts(24,15): error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== superPropertyAccess1.ts (3 errors) ====
    class C {
        public foo() { }
        public get x() {
            return 1;
        }
    
        public bar() { }
    }
    
    class D extends C {
        public foo() {
            super.bar();
            super.x;  // error
                  ~
!!! error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
        }    
    
        constructor() {
            super();
            super.bar();
            super.x;  // error
                  ~
!!! error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
        }
    
        public get y() {
            super.bar();
            super.x; // error
                  ~
!!! error TS2340: Only public and protected methods of the base class are accessible via the 'super' keyword.
            return 1;
        }
    }